--- a/master/docs/relnotes/0.8.7.rst
+++ b/master/docs/relnotes/0.8.7.rst
@@ -139,7 +139,7 @@ Deprecations, Removals, and Non-Compatible Changes
       * ``get_from_post`` is renamed to ``getFromKwargs``
 
       * ``update_from_post`` is renamed to ``updateFromKwargs``. This function's parameters
-        are now called via named parameters to allow subclasses to ignore values it doesnt use.
+        are now called via named parameters to allow subclasses to ignore values it doesn't use.
         Subclasses should add ``**unused`` for future compatibility. A new parameter
         ``sourcestampset`` is provided to allow subclasses to modify the sourcestamp set, and
         will probably require you to add the ``**unused`` field.
