--- a/master/docs/relnotes/0.9.0b6.rst
+++ b/master/docs/relnotes/0.9.0b6.rst
@@ -42,7 +42,7 @@ Features
 * The :class:`DockerLatentBuildSlave` image attribute is now renderable (can take properties in account).
 
 * The :class:`DockerLatentBuildSlave` sets environment variables describing how to connect to the master.
-  Example dockerfiles can be found in :src:`master/contrib/docker`.
+  Example dockerfiles can be found in :contrib-src:`master/contrib/docker`.
 
 
 Details
