use regular tick instead of bactick

--- a/master/docs/relnotes/0.9.0b1.rst
+++ b/master/docs/relnotes/0.9.0b1.rst
@@ -406,7 +406,7 @@ Changes for Developers
 
 * The ``preStartConsumingChanges`` and ``startTimedSchedulerService`` hooks have been removed.
 
-* The triggerable schedulers` ``trigger`` method now requires a list of sourcestamps, rather than a dictionary.
+* The triggerable schedulers' ``trigger`` method now requires a list of sourcestamps, rather than a dictionary.
 
 * The :py:class:`~buildbot.sourcestamp.SourceStamp` class is no longer used.
   It remains in the codebase to support loading data from pickles on upgrade, but should not be used in running code.
