--- a/master/docs/buildbot.1
+++ b/master/docs/buildbot.1
@@ -368,7 +368,7 @@ Set the location of buildmaster's PBChangeSource to attach to in form
 .IR HOST : PORT .
 .TP
 .BR \-u | \-\-username
-Set commiter's username to
+Set committer's username to
 .IR USERNAME .
 .TP
 .BR \-R | \-\-repository
