--- a/worker/docs/buildbot-worker.1
+++ b/worker/docs/buildbot-worker.1
@@ -164,7 +164,7 @@ See
 for more details.
 .TP
 .BR \-\-usepty
-Set wether child processes should be run in a pty (0 means do not run in a
+Set whether child processes should be run in a pty (0 means do not run in a
 pty).
 Default value is 0.
 .TP
