--- a/master/docs/relnotes/0.9.0.rst
+++ b/master/docs/relnotes/0.9.0.rst
@@ -304,7 +304,7 @@ Fixes
 
 * The build properties are now stored in the database in the ``build_properties`` table.
 
-* The list of changes in the build page now displays all the changes since the last sucessful build.
+* The list of changes in the build page now displays all the changes since the last successful build.
 
 * GitHub change hook now correctly responds to ping events.
 
