--- a/master/docs/relnotes/0.8.6.rst
+++ b/master/docs/relnotes/0.8.6.rst
@@ -160,7 +160,7 @@ Features
   in :pull:`278`.
 
 * The master-side SVN step now has an `export` method which is similar to
-  `copy`, but the build directory does not contain Subversion metdata. (:bug:`2078`)
+  `copy`, but the build directory does not contain Subversion metadata. (:bug:`2078`)
 
 * :py:class:`Property` instances will now render any properties in the
   default value if necessary.  This makes possible constructs like ::
