--- a/master/docs/relnotes/0.8.12.rst
+++ b/master/docs/relnotes/0.8.12.rst
@@ -101,7 +101,7 @@ Fixes
 * GitHub change hook now correctly responds to ping events.
 * ``buildbot.steps.http`` steps now correctly have ``url`` parameter renderable
 * :bb:step:`MasterShellCommand` now correctly logs the working directory where it was run.
-* With Git(), force the updating submodules to ensure local changes by the build are overwitten.
+* With Git(), force the updating submodules to ensure local changes by the build are overwritten.
   This both ensures more consistent builds and avoids errors when updating submodules.
 * With Git(), make sure 'git submodule sync' is called before 'git submodule update' to update
   stale remote urls (:bug:`2155`).
