--- a/master/docs/relnotes/3.x.rst
+++ b/master/docs/relnotes/3.x.rst
@@ -1,3 +1,22 @@
+Buildbot ``3.11.7`` ( ``2024-08-01`` )
+======================================
+
+Bug fixes
+---------
+
+- Fixed ``GitPoller`` when repourl has the port specified (:issue:`7822`)
+- Fixed ``ChoiceStringParameter`` fields with ``multiple`` would not store the selected values
+- Fixed unnecessary trimming of spaces in logs showed in the web UI (:issue:`7774`)
+- Fixed favicon colors on build views in the web UI
+- Fixed the icon on the about page in the web UI
+- Fixed a regression where builds in waterfall view were no longer linking to the build page.
+
+Changes
+-------
+
+- Buildbot will now error when configured with multiple services of the same type are configured
+  with the same name (:issue:`6987`)
+
 Buildbot ``3.11.6`` ( ``2024-07-12`` )
 ======================================
 
