docs: Inline links to buildbot-contrib in release notes

--- a/master/docs/relnotes/0.9.0.rst
+++ b/master/docs/relnotes/0.9.0.rst
@@ -278,7 +278,7 @@ Fixes
 * :bb:chsrc:`P4Source`'s ``server_tz`` parameter now works correctly.
 
 * The ``revlink`` in changes produced by the Bitbucket hook now correctly includes the ``changes/`` portion of the URL.
-* :bb:chsrc:`PBChangeSource`'s git hook :contrib-src:`master/contrib/git_buildbot.py` now supports git tags
+* :bb:chsrc:`PBChangeSource`'s git hook `https://github.com/buildbot/buildbot-contrib/tree/master/master/contrib/git_buildbot.py` now supports git tags
 
   A pushed git tag generates a change event with the ``branch`` property equal to the tag name.
   To schedule builds based on buildbot tags, one could use something like this:
@@ -592,7 +592,7 @@ Features
 * The :class:`DockerLatentWorker` image attribute is now renderable (can take properties in account).
 
 * The :class:`DockerLatentWorker` sets environment variables describing how to connect to the master.
-  Example dockerfiles can be found in :contrib-src:`master/contrib/docker`.
+  Example dockerfiles can be found in `https://github.com/buildbot/buildbot-contrib/tree/master/master/contrib/docker`.
 
 * :class:`DockerLatentWorker` now has a ``hostconfig`` parameter that can be used to setup host configuration when creating a new container.
 
